--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,30 @@
 {
   "name": "onvardgmbh/wp-helper",
   "description": "Wordpress helper functions",
+  "license": "MIT",
+  "homepage": "https://github.com/onvardgmbh/wp-helper",
   "keywords": [
     "wordpress",
     "onvard",
     "helper"
   ],
   "type": "library",
-  "license": "MIT",
   "authors": [
     {
       "name": "André Schwarzer",
       "email": "schwarzer@onvard.de"
+    },
+    {
+      "name": "Galdor Takacs",
+      "email": "galdor.takacs@gmail.com"
     }
   ],
+  "require-dev": {
+    "phpunit/phpunit": "^6.0.6"
+  },
   "autoload": {
     "psr-4": {
-      "Onvardgmbh\\": "/"
+      "Onvardgmbh\\WpHelper\\": "src/"
     }
   }
 }
